# stt01

./: .gitignore  README.md  config.toml  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
docs/: ASR_DESIGN_NOTES.md  FINETUNING_ROADMAP.md  USER_GUIDE.md
glossary/: corrections.tsv  legal_keek-keek.txt  legal_ko.txt
scripts/: download_models.py
src/courtstt/: __init__.py  __main__.py  cli.py  config.py  gui.py  pipeline.py  postprocess.py  review.py  textnorm.py  writers.py
src/courtstt/engines/: __init__.py  base.py  fasterwhisper_engine.py
tests/: conftest.py  test_config.py  test_pipeline.py  test_postprocess.py  test_textnorm.py  test_writers_review.py
training/: build_corpus.py  eval_cer.py  train_lora.py
training/output/whisper-tiny-court-lora/checkpoints/checkpoint-1/: .tmpUbc9Bf
